[gd_scene load_steps=11 format=1]

[ext_resource path="res://scripts/main.gd" type="Script" id=1]
[ext_resource path="res://art/starfield.png" type="Texture" id=2]
[ext_resource path="res://scenes/ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://fonts/KenVector Future.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scenes/left.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/right.tscn" type="PackedScene" id=6]
[ext_resource path="res://art/separator.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]

font/size = 16
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]

font/size = 16
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 324.601, 10 )

[node name="main" type="Node2D"]

script/script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]

transform/pos = Vector2( 318, 190 )
texture = ExtResource( 2 )

[node name="ball" parent="." instance=ExtResource( 3 )]

transform/pos = Vector2( 300, 50 )

[node name="HUD" type="Control" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="left_score" type="Label" parent="HUD"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 142.0
margin/top = 31.0
margin/right = 182.0
margin/bottom = 45.0
custom_fonts/font = SubResource( 1 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="right_score" type="Label" parent="HUD"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 487.0
margin/top = 32.0
margin/right = 527.0
margin/bottom = 46.0
custom_fonts/font = SubResource( 2 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="left" parent="." instance=ExtResource( 5 )]

[node name="right" parent="." instance=ExtResource( 6 )]

[node name="separator" type="Sprite" parent="."]

transform/pos = Vector2( 320, 200 )
texture = ExtResource( 7 )

[node name="camera" type="Camera2D" parent="."]

visibility/behind_parent = true
transform/pos = Vector2( 321, 200 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="rumble_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.3
one_shot = true
autostart = false

[node name="wall_up" type="StaticBody2D" parent="."]

editor/display_folded = true
input/pickable = false
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 316.279, -9.9141 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall_up"]

transform/pos = Vector2( 316.279, -9.9141 )
shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="wall_down" type="StaticBody2D" parent="."]

editor/display_folded = true
input/pickable = false
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 317.188, 410.036 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall_down"]

transform/pos = Vector2( 317.188, 410.036 )
shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="explosion_container" type="Node" parent="."]

[connection signal="timeout" from="rumble_timer" to="." method="_on_rumble_timer_timeout"]


